crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__auto_scroll_follows_new_content.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---

Answer 8.

[you] Question 9

Answer 9.
