crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__renders_text_batch.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---
[you] Hello agent

The answer is 42.
