crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__scroll_mid_section_shows_correct_lines.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---
line two
line three
line four
line five
