crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__scroll_offset_skips_first_batch.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---
The answer is 42.
Stop: EndTurn

[you] Second question

Second answer.
Stop: EndTurn
