crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__thinking_expanded_shows_content.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---
[you] Think about this

Let me consider the options carefully...
I have thought about it.
