crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__conversation__tests__tool_call_collapsed_shows_name.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
expression: output
---
[you] Search for info

 ▸ tool: search
Found results.
